--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.3.0",
     "core-js": "^2.5.4",
+    "gl-ionic-background-video": "0.0.5",
     "ng2-file-upload": "^1.3.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
