--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/document-viewer": "^5.5.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.3.0",
     "core-js": "^2.5.4",
     "gl-ionic-background-video": "0.0.5",
     "ng2-file-upload": "^1.3.0",
+    "ng2-pdf-viewer": "^5.2.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
