--- a/angular.json
+++ b/angular.json
@@ -75,7 +75,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "app:build"
+            "browserTarget": "app:build",
+            "publicHost": "http://localhost:5000"
           },
           "configurations": {
             "production": {
